# legion

./: .gitignore  .pyup.yml  README.md  makefile  pyproject.toml  requirements-dev.txt
.github/: issue_template.md
.github/workflows/: build.yml
legion/: __init__.py  __main__.py  bot.py  cli.py  config.py  log.py  unit.py
legion/units/: __init__.py  channel.py  chatlog.py  core.py  help.py  quotes.py  seinfeld.py  twitter.py
